# antipode-deathstarbench

./: .gitignore  .gitmodules  README.md  antipode_manager.py  hosts.py  maestrina  maestro  maestro.py  plot  ploting.py  plots.py  requirements.txt
configs/: socialNetwork-gcp-singlenode.yml  socialNetwork-gsd-20201115.yml  socialNetwork-gsd-saturn1.yml
deploy/: docker-compose-swarm.yml  docker-compose.yml
deploy/configurations/: socialNetwork-gcp-20201126154018.yml  socialNetwork-gcp-colocated.yml  socialNetwork-gcp-singlenode.yml  socialNetwork-gcp-us-br.yml  socialNetwork-gcp-us-sg-125.yml  socialNetwork-gsd-20201012173711.yml  socialNetwork-gsd-20201115.yml  socialNetwork-gsd-saturn1.yml  socialNetwork-gsd-split-cluster.yml
deploy/gcp/: .gitignore  Dockerfile  ansible.cfg  clients_inventory.cfg  clients_inventory_local.cfg  delay-container.yml  deploy-setup.yml  deploy-swarm.yml  docker-compose-prometheus.yml  init-social-graph.yml  inventory.cfg  playbook-start-prometheus.yaml  prometheus.yml.j2  rescale-dsb.yml  restart-dsb.yml  restart-jaeger.yml  start-dsb.yml  start-portainer.yml  start-prometheus.yaml  undeploy-prometheus.yml  undeploy-swarm.yml  wkld-gather.yml  wkld-run.sh  wkld-run.yml
deploy/gsd/: ansible.cfg  containers-build.yml  docker-compose-swarm.yml  init-social-graph.yml  inventory.cfg  start-dsb.yml  start-portainer.yml  undeploy-swarm.yml  vars.yml  wkld-start.sh  wkld-start.yml
deploy/local/: .gitignore  docker-compose.yml
deploy/playbooks/: ansible.cfg  build-images.yml  containers-backup.yml  containers-build.yml  containers-restore.yml  vars.yml  (+10 more)
gcp/: .gitignore  Dockerfile  base_vm.sh  config.yml  deploy-prometheus.yml  deploy-setup.yml  deploy-swarm.yml  dsb-deploy.yml  dsb-restart.yml  dsb-start.yml  init-social-graph.yml  portainer-start.yml  prometheus-deploy.yml  prometheus.yml.j2  restart-dsb.yml  start-dsb.yml  start-portainer.yml  start-prometheus.yml  swarm-checker.yml  swarm-deploy.yml  swarm-undeploy.yml  undeploy-portainer.yml  undeploy-swarm.yml  vars.yml  wkld-gather.yml  wkld-run.yml
gsd/: clients_inventory.cfg  config.yml  containers-backup.yml  containers-build.yml  containers-clean.yml  containers-restore.yml  deploy-swarm.yml  docker-compose.yml  dsb-clean.yml  dsb-deploy.yml  dsb-restart.yml  dsb-start.yml  init-social-graph.yml  portainer-start.yml  portainer-undeploy.yml  prometheus-deploy.yml  prometheus-start.yml  prometheus-undeploy.yml  start-dsb.yml  swarm-checker.yml  swarm-deploy.yml  swarm-undeploy.yml  undeploy-swarm.yml  vars.yml  wkld-gather.yml  wkld-run.yml
hotelReservation/: Dockerfile  docker-compose.yml
local/: docker-compose-portainer.yml
mediaMicroservices/: Dockerfile  README.md  docker-compose.yml  media_service.thrift
mediaMicroservices/src/MovieReviewService/: CMakeLists.txt  MovieReviewHandler.h
mediaMicroservices/src/TextService/: CMakeLists.txt  TextHandler.h
playbooks/: ansible.cfg  deploy-swarm.yaml  inventory.cfg
socialNetwork/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose-swarm.yml  docker-compose.yml  social_network.thrift
socialNetwork/src/AntipodeOracle/: AntipodeOracle.cpp  AntipodeOracle.h  CMakeLists.txt
socialNetwork/src/WriteHomeTimelineService/: CMakeLists.txt  WriteHomeTimelineService.cpp  WriteHomeTimelineService.h
(+303 files in other folders)
